--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -38,3 +38,4 @@ vscode:
     - dbaeumer.vscode-eslint@2.1.5:9Wg0Glx/TwD8ElFBg+FKcQ==
     - esbenp.prettier-vscode@5.0.0:qca7d0cHbKkrkb5rvNlpcg==
     - flowtype.flow-for-vscode@1.5.0:AwOT6wgHTF43loZQCAUMLA==
+    - Angular.ng-template
